made some adjustments to my earlier assignments and also completed the prime number assignment

--- a/control_flow/index.html
+++ b/control_flow/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="ex4.js"></script>
+    <script src="prime_numbers.js"></script>
   </body>
 </html>
